# teco-ops

./: .gitignore  README.md  build.sh  setup.py
api/: torch_ext.cpp
api/tecoops/: __init__.py
doc/op_docs/: flash_attention.md  reshape_and_cache.md
plugin_test/: test_plugin_flash_attention.py  test_plugin_flatten_rays.py  test_plugin_reshape_and_cache.py
python_api_test/: test_flash_attention.py  test_reshape_and_cache.py
teco/: CMakeLists.txt
teco/interface/include/: tecoops.h
teco/interface/ops/: flash_attention.cpp  reshape_and_cache.cpp
teco/plugin/pluginFlashAttention/: plugin_flash_attention.cc
teco/plugin/pluginFlattenRays/: plugin_flatten_rays.cc
teco/plugin/pluginReshapeAndCache/: plugin_reshape_and_cache.cc
teco/ual/args/: flash_attention_args.h  reshape_and_cache_args.h
teco/ual/kernel/flash_attention/: flash_attention.h  flash_attention.scpp
teco/ual/kernel/reshape_and_cache/: reshape_and_cache.h  reshape_and_cache_fp16.scpp
teco/ual/ops/flash_attention/: find_flash_attention.cpp  find_flash_attention.h  flash_attention.hpp
teco/ual/ops/reshape_and_cache/: find_reshape_and_cache.cpp  find_reshape_and_cache.h  reshape_and_cache.hpp
test/src/case/: evaluator.h
test/test_proto/: tecokernel.proto
test/test_proto/tecokernel/: flash_attention.proto  reshape_and_cache.proto
test/zoo/teco/: executor.py
test/zoo/teco/flash_attention/: flash_attention.cpp  flash_attention.h  flash_attention.py
test/zoo/teco/flash_attention/test_case/: 0.prototxt  1.prototxt  2.prototxt  3.prototxt  4.prototxt
test/zoo/teco/reshape_and_cache/: reshape_and_cache.cpp  reshape_and_cache.h
test/zoo/teco/reshape_and_cache/test_case/: case_0.prototxt  case_1.prototxt  case_2.prototxt
tools/: deps.py
